[gd_scene load_steps=18 format=3 uid="uid://bl8fy4bkw5rdr"]

[ext_resource type="Script" path="res://Script/crowd_member.gd" id="1_2m8q3"]
[ext_resource type="Texture2D" uid="uid://ditkmrdmoscht" path="res://Assets/UI/rotatingarrow.png" id="2_xp8fy"]
[ext_resource type="Texture2D" uid="uid://cvcvbac04nos2" path="res://Assets/UI/YCSTA_healthbar-1.png" id="6_233ds"]
[ext_resource type="AnimationLibrary" uid="uid://cp4faxa0d0emw" path="res://Scenes/MeeblingLib.res" id="6_rondv"]
[ext_resource type="Texture2D" uid="uid://c70378fp1g0kl" path="res://Assets/UI/YCSTA_healthbar-2.png" id="7_0nmkx"]
[ext_resource type="AnimationLibrary" uid="uid://dfyarakuqbg7j" path="res://Scenes/BirthLib.res" id="7_pr2jw"]
[ext_resource type="AudioStream" uid="uid://c3c2eau8lpm7v" path="res://Sounds/exppickup1.wav" id="7_v01ic"]
[ext_resource type="Texture2D" uid="uid://dvav5qp6ypv2b" path="res://Assets/YCSTA_Meeblings-Spritesheet.png" id="8_b8lae"]
[ext_resource type="AudioStream" uid="uid://b3qee1fus0dfw" path="res://Sounds/meeblingdeath.wav" id="8_p3mta"]
[ext_resource type="AudioStream" uid="uid://cshcblbmdc83w" path="res://Sounds/splash2.wav" id="9_7blra"]
[ext_resource type="Texture2D" uid="uid://dlws0qyse6xe4" path="res://Assets/arrowshadow.png" id="9_istdl"]
[ext_resource type="AudioStream" uid="uid://dsfcd8ewbeh2s" path="res://Sounds/fireball.wav" id="10_v16go"]
[ext_resource type="AudioStream" uid="uid://byqt1itgmqt6n" path="res://Sounds/meeblinghit.wav" id="11_4i7mk"]
[ext_resource type="AudioStream" uid="uid://c66u7y8neairl" path="res://Sounds/spell1.wav" id="12_meu6k"]
[ext_resource type="AudioStream" uid="uid://c2bt7kbawpevd" path="res://Sounds/whiffMid.wav" id="13_x2qys"]

[sub_resource type="CircleShape2D" id="CircleShape2D_yq8a6"]
radius = 7.0

[sub_resource type="CircleShape2D" id="CircleShape2D_e1ekq"]
radius = 9.05539

[node name="Crowd_Member" type="CharacterBody2D" groups=["crowd_m"]]
z_index = 3
collision_mask = 2
script = ExtResource("1_2m8q3")

[node name="Rot" type="Node2D" parent="."]
visible = false

[node name="Rotatingarrow" type="Sprite2D" parent="Rot"]
texture_filter = 1
rotation = 1.5708
texture = ExtResource("2_xp8fy")

[node name="Rot2" type="Node2D" parent="."]
visible = false

[node name="Rotatingarrow" type="Sprite2D" parent="Rot2"]
texture_filter = 1
rotation = 1.5708
texture = ExtResource("2_xp8fy")

[node name="Healthbar" type="TextureProgressBar" parent="."]
visible = false
z_index = 2
texture_filter = 1
offset_left = -5.0
offset_top = -14.0
offset_right = 5.0
offset_bottom = -13.0
max_value = 10.0
value = 10.0
texture_under = ExtResource("6_233ds")
texture_progress = ExtResource("7_0nmkx")

[node name="Meebling" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("8_b8lae")
hframes = 3
vframes = 3

[node name="Anim" type="AnimationPlayer" parent="Meebling"]
libraries = {
"": ExtResource("6_rondv"),
"BirthLib": ExtResource("7_pr2jw")
}

[node name="Shadow" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.501961)
z_index = -1
y_sort_enabled = true
texture_filter = 1
position = Vector2(0, 7)
texture = ExtResource("9_istdl")

[node name="Colbox" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_yq8a6")

[node name="Hurtbox_crowd" type="Area2D" parent="." groups=["CrowdHurt"]]
collision_layer = 2049
collision_mask = 2049

[node name="box" type="CollisionShape2D" parent="Hurtbox_crowd"]
shape = SubResource("CircleShape2D_e1ekq")

[node name="Sounds" type="Node2D" parent="."]

[node name="EXPpickup" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource("7_v01ic")
bus = &"SFX"

[node name="Break" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource("8_p3mta")
volume_db = 5.0
bus = &"SFX"

[node name="Splash" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource("9_7blra")
bus = &"SFX"

[node name="Shoot" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource("10_v16go")
volume_db = -16.0
bus = &"SFX"

[node name="Hit" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource("11_4i7mk")
bus = &"SFX"

[node name="Bigspell" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource("12_meu6k")
bus = &"SFX"

[node name="Fall" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource("13_x2qys")
bus = &"SFX"

[node name="SoundsSplash" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("9_7blra")

[node name="Timers" type="Node" parent="."]

[node name="DoubleBulletTimer" type="Timer" parent="Timers"]
wait_time = 0.05
one_shot = true

[node name="CooldownstartTimer" type="Timer" parent="Timers"]
wait_time = 0.05
one_shot = true

[node name="QueueTimer" type="Timer" parent="Timers"]
wait_time = 2.0
one_shot = true

[node name="SplashTimer" type="Timer" parent="Timers"]
wait_time = 0.8
one_shot = true

[node name="CliffWaterCollider" type="RayCast2D" parent="."]
position = Vector2(0, 3)
target_position = Vector2(0, 4)
collision_mask = 16
hit_from_inside = true

[connection signal="area_entered" from="Hurtbox_crowd" to="." method="_on_hurtbox_crowd_area_entered"]
[connection signal="area_exited" from="Hurtbox_crowd" to="." method="_on_hurtbox_crowd_area_exited"]
[connection signal="timeout" from="Timers/DoubleBulletTimer" to="." method="_on_double_bullet_timer_timeout"]
[connection signal="timeout" from="Timers/CooldownstartTimer" to="." method="_on_cooldownstart_timer_timeout"]
[connection signal="timeout" from="Timers/QueueTimer" to="." method="_on_queue_timer_timeout"]
[connection signal="timeout" from="Timers/SplashTimer" to="." method="_on_splash_timer_timeout"]
